CHANGES
=======

3.5.4 (unreleased)
------------------

Bugs fixed:

* LP #98440: interfaces lost on retried request

* LP #253362: dealing more nicely with malformed HTTP_ACCEPT_CHARSET headers
  within getPreferredCharsets().

* LP #98284: Pass the ``size`` argument to readline, as the version of
  twisted used in zope.app.twisted supports it

3.5.3 (2008-06-20)
------------------

Bugs fixed:

* It turns out that some Web servers (Paste for example) do not send the EOF
  character after the data has been transmitted and the read() of the cached
  stream simply hangs if no expected content length has been specified.


3.5.2 (2008-04-06)
------------------

Bugs fixed:

* A previous fix to handle posting of non-form data broke handling of
  form data with extra information in the content type, as in::

    application/x-www-form-urlencoded; charset=UTF-8

3.5.1 (2008-03-23)
------------------

Bugs fixed:

* When posting non-form (and non-multipart) data, the request body was
  consumed and discarded. This makes it impossible to deal with other
  post types, like xml-rpc or json without resorting to overly complex
  "request factory" contortions.

* https://bugs.launchpad.net/zope2/+bug/143873

  The zope.publisher.http.HTTPCharsets was confused by the Zope 2
  publisher, which gives missleading information about which headers
  it has.

3.5.0 (2008-03-02)
------------------

Features added:

* Added a PasteDeploy app_factory implementation.  This should make
  it easier to integrate Zope 3 applications with PasteDeploy.  It
  also makes it easier to control the publication used, giving far
  greater control over application policies (e.g. whether or not to
  use the ZODB).

3.4.2 (2007-12-07)
------------------

* Made segmentation of URLs not strip (trailing) whitespace from path segments
  to allow URLs ending in %20 to be handled correctly. (#172742)

3.4.1 (2007-09-29)
------------------

No changes since 3.4.1b2.

3.4.1b2 (2007-08-02)
--------------------
