@@ -19,7 +19,7 @@ $Id$
 import sys
 import tempfile
 import unittest
-from StringIO import StringIO
+from cStringIO import StringIO
 from Cookie import CookieError
 
 import zope.event
